file(GLOB SOURCES
    ${CMAKE_CURRENT_LIST_DIR}/*/*.cpp
)

add_library (${ERT_DIAMETERCODEC_TARGET_NAME} ${SOURCES})

target_include_directories (${ERT_DIAMETERCODEC_TARGET_NAME}
  PUBLIC ${ERT_DIAMETERCODEC_INCLUDE_BUILD_DIR}
)

install(TARGETS ${ERT_DIAMETERCODEC_TARGET_NAME}
        ARCHIVE DESTINATION lib/ert)
